--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
+<!-- q: how to create a backend table that contains the logic instead of using if-else blocks -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Document</title>
+ <title>rps</title>
+ <link rel="stylesheet" href="styles.css">
+</head>
 </head>
 <body>
+ <div class="overlayContainer">
+  <div class="options">
+   <button id="rock">ROCK</button>
+   <button id="paper">PAPER</button>
+   <button id="scissors">SCISSORS</button>
+  </div>
+
+ </div>
  <script src = "script.js"></script>
 </body>
 </html>
