--- a/index.html
+++ b/index.html
@@ -1,24 +1,71 @@
-<!-- q: how to create a backend table that contains the logic instead of using if-else blocks -->
-
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
- <meta charset="UTF-8">
- <meta http-equiv="X-UA-Compatible" content="IE=edge">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>rps</title>
- <link rel="stylesheet" href="styles.css">
-</head>
+  <title>Rock Paper Scissors</title>
+  <style>
+    /* Style for the buttons */
+    button {
+      padding: 10px 20px;
+      font-size: 20px;
+      margin-right: 10px;
+    }
+  </style>
 </head>
 <body>
- <div class="overlayContainer">
-  <div class="options">
-   <button id="rock">ROCK</button>
-   <button id="paper">PAPER</button>
-   <button id="scissors">SCISSORS</button>
-  </div>
+  <h1>Rock Paper Scissors</h1>
+  <p>Choose your move:</p>
+  <button id="rock">Rock</button>
+  <button id="paper">Paper</button>
+  <button id="scissors">Scissors</button>
+  <br><br>
+  <p id="result"></p>
 
- </div>
- <script src = "script.js"></script>
+  <script>
+    const rockButton = document.getElementById("rock");
+    const paperButton = document.getElementById("paper");
+    const scissorsButton = document.getElementById("scissors");
+    const result = document.getElementById("result");
+
+    // Function to generate computer's move
+    function computerPlay() {
+      const moves = ["rock", "paper", "scissors"];
+      const randomIndex = Math.floor(Math.random() * 3);
+      return moves[randomIndex];
+    }
+
+    // Function to determine winner
+    function playRound(playerSelection, computerSelection) {
+      if (playerSelection === computerSelection) {
+        return "It's a tie!";
+      } else if (
+        (playerSelection === "rock" && computerSelection === "scissors") ||
+        (playerSelection === "paper" && computerSelection === "rock") ||
+        (playerSelection === "scissors" && computerSelection === "paper")
+      ) {
+        return "You win!";
+      } else {
+        return "Computer wins!";
+      }
+    }
+
+    // Event listeners for the buttons
+    rockButton.addEventListener("click", () => {
+      const computerSelection = computerPlay();
+      const resultText = playRound("rock", computerSelection);
+      result.textContent = resultText;
+    });
+
+    paperButton.addEventListener("click", () => {
+      const computerSelection = computerPlay();
+      const resultText = playRound("paper", computerSelection);
+      result.textContent = resultText;
+    });
+
+    scissorsButton.addEventListener("click", () => {
+      const computerSelection = computerPlay();
+      const resultText = playRound("scissors", computerSelection);
+      result.textContent = resultText;
+    });
+  </script>
 </body>
 </html>
