Add base UI the simplest

--- a/index.html
+++ b/index.html
@@ -2,23 +2,29 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
- <meta charset="UTF-8">
- <meta http-equiv="X-UA-Compatible" content="IE=edge">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>rps</title>
- <link rel="stylesheet" href="styles.css">
-</head>
-</head>
-<body>
- <div class="overlayContainer">
-  <div class="options">
-   <button id="rock">ROCK</button>
-   <button id="paper">PAPER</button>
-   <button id="scissors">SCISSORS</button>
-  </div>
 
- </div>
- <script src = "script.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>rps</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+</head>
+
+<body>
+    <div class="overlayContainer">
+        <h1>Rock Paper Scissors</h1>
+        <p>Choose your move:</p>
+        <div class="options">
+            <button id="rock">ROCK</button>
+            <button id="paper">PAPER</button>
+            <button id="scissors">SCISSORS</button>
+        </div>
+        <br><br>
+        <p id="result"></p>
+    </div>
+    <script src="script.js"></script>
 </body>
+
 </html>
