--- a/index.html
+++ b/index.html
@@ -14,7 +14,42 @@
 
 <body>
     <div class="overlayContainer">
+
+        <div id="popup" class="popup">
+            <h2>Helloooooo</h2>
+            <p>Are you ready to take on the most formidable of foes? Are you ready to pit your wits and your cunning
+                against the very forces of chance?
+                Step right up and take your place among the legends of Rock Paper Scissors!</p>
+            <p>Good luck!!!</p>
+            <div class="button-container">
+            <button id="yesBtn">YES</button>
+            <button id="noBtn">NO</button>
+            </div>
+
+        </div>
+
+
         <h1>Rock Paper Scissors</h1>
+
+        <p>In a world where the fate of empires hangs on the whims of a mere game, where kings and queens play with
+            nothing more than their wits and their hands, there lies a most peculiar pastime - a game of chance and
+            skill that can make or break even the mightiest of souls.
+
+            It is a game known as Rock Paper Scissors - a game of strategy and deception, of cunning and guile, where
+            one's fate is determined by nothing more than the flip of a wrist and the shape of a hand.
+
+            Legend has it that the game was first played by the ancient gods, who sought a way to settle their eternal
+            disputes without resorting to violence or bloodshed. And so they devised a game that would test their
+            intellect and agility, their cunning and their wit.
+
+            But little did they know that their creation would go on to become the bane of schoolyards and offices
+            across the land, a game so addictive and so compelling that it has driven men to madness and women to tears.
+
+            And yet, in the midst of this chaos and this madness, there are those who still cling to the hope that they
+            might one day emerge victorious, that they might one day triumph over the odds and claim the title of Rock
+            Paper Scissors Champion.
+
+        </p>
         <p>Choose your move:</p>
         <div class="options">
             <button id="rock">ROCK</button>
