Add point system

--- a/index.html
+++ b/index.html
@@ -7,13 +7,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>rps</title>
+    <title>R-P-S</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 </head>
 
 <body>
     <div class="overlayContainer">
+
+
+        <header>
+            <div class="logo">R-P-S</div>
+            <nav>
+                <a href="https://github.com/sdooodly" target="_blank" class="icon github-icon"></a>
+
+                <a href="https://www.linkedin.com/in/gayathri-gireesh-sujatha" target="_blank"
+                    class="icon linkedin-icon"></a>
+                <a href="mailto:gayathrigs@outlook.com" class="icon gmail-icon"></a>
+
+
+
+            </nav>
+        </header>
+
+
+
 
         <div id="popup" class="popup">
             <h2>Helloooooo</h2>
@@ -22,42 +40,47 @@
                 Step right up and take your place among the legends of Rock Paper Scissors!</p>
             <p>Good luck!!!</p>
             <div class="button-container">
-            <button id="yesBtn">YES</button>
-            <button id="noBtn">NO</button>
+                <button id="yesBtn">YES</button>
+                <button id="noBtn">NO</button>
             </div>
 
         </div>
 
+        <div class="content">
 
-        <h1>Rock Paper Scissors</h1>
 
-        <p>In a world where the fate of empires hangs on the whims of a mere game, where kings and queens play with
-            nothing more than their wits and their hands, there lies a most peculiar pastime - a game of chance and
-            skill that can make or break even the mightiest of souls.
+            <h1>Rock Paper Scissors</h1>
 
-            It is a game known as Rock Paper Scissors - a game of strategy and deception, of cunning and guile, where
-            one's fate is determined by nothing more than the flip of a wrist and the shape of a hand.
+            <p>
+                Legend has it that Rock Paper Scissors was first played by the ancient gods, who sought a way to settle
+                their eternal
+                disputes without resorting to violence or bloodshed. And so they devised a game that would test their
+                intellect and agility, their cunning and their wit.
+            </p>
 
-            Legend has it that the game was first played by the ancient gods, who sought a way to settle their eternal
-            disputes without resorting to violence or bloodshed. And so they devised a game that would test their
-            intellect and agility, their cunning and their wit.
+            <p>Choose your move:</p>
+            <div class="options">
+                <button id="rock">ROCK</button>
+                <button id="paper">PAPER</button>
+                <button id="scissors">SCISSORS</button>
+            </div>
+            <br><br>
+            <p id="ycText">Your choice: </p>
+            <p id="ccText">Computer's choice: </p>
+            <p id="result"></p>
 
-            But little did they know that their creation would go on to become the bane of schoolyards and offices
-            across the land, a game so addictive and so compelling that it has driven men to madness and women to tears.
+            <table>
+                <tr>
+                    <th>Your score</th>
+                    <th>Computer's score</th>
+                </tr>
+                <tr>
+                    <td id="yourScoreCell"></td>
+                    <td id="computerScoreCell"></td>
+                </tr>
+            </table>
 
-            And yet, in the midst of this chaos and this madness, there are those who still cling to the hope that they
-            might one day emerge victorious, that they might one day triumph over the odds and claim the title of Rock
-            Paper Scissors Champion.
-
-        </p>
-        <p>Choose your move:</p>
-        <div class="options">
-            <button id="rock">ROCK</button>
-            <button id="paper">PAPER</button>
-            <button id="scissors">SCISSORS</button>
         </div>
-        <br><br>
-        <p id="result"></p>
     </div>
     <script src="script.js"></script>
 </body>
