--- a/index.html
+++ b/index.html
@@ -30,9 +30,6 @@
             </nav>
         </header>
 
-
-
-
         <div id="popup" class="popup">
             <h2>Helloooooo</h2>
             <p>Are you ready to take on the most formidable of foes? Are you ready to pit your wits and your cunning
@@ -81,6 +78,9 @@
             </table>
 
         </div>
+        <footer>
+            <h13>Copyright &copy The Odin Project 2023</h13>
+        </footer>
     </div>
     <script src="script.js"></script>
 </body>
