--- a/index.html
+++ b/index.html
@@ -53,11 +53,10 @@
                 intellect and agility, their cunning and their wit.
             </p>
 
-            <p>Choose your move:</p>
             <div class="options">
-                <button id="rock">ROCK</button>
-                <button id="paper">PAPER</button>
-                <button id="scissors">SCISSORS</button>
+                <button id="rock"></button>
+                <button id="paper"></button>
+                <button id="scissors"></button>
             </div>
 
             <div class="score">
