Flex the options

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 Legend has it that Rock Paper Scissors was first played by the ancient gods, who sought a way to settle
                 their eternal
                 disputes without resorting to violence or bloodshed. And so they devised a game that would test their
-                intellect and agility, their cunning and their wit.
+                intellect and agility, their cunning and their wit. Good luck!
             </p>
 
             <div class="options">
@@ -60,39 +60,39 @@
             </div>
 
             <div class="score">
-             <div class="left">
-             <h1>YOU</h1>
-             <h1 id="yourScoreCell">0</h1>
+                <div class="left">
+                    <h1>YOU</h1>
+                    <h1 id="yourScoreCell">0</h1>
+                </div>
+                <div class="left">
+                    <h1>COMPUTER</h1>
+                    <h1 id="computerScoreCell">0</h1>
+                </div>
             </div>
-             <div class="left">
-             <h1>COMPUTER</h1>
-             <h1  id="computerScoreCell">0</h1>
-            </div>
-              </div>
-            
+
             <p id="ycText">Your choice: </p>
             <p id="ccText">Computer's choice: </p>
             <p id="result"></p>
 
-            <br><br>
-      
+            <!--<br><br> 
+
 
 
             <table id="log">
-             <thead>
-               <tr>
-                 <th>Round</th>
-                 <th>kshdjs</th>
-                 <th>dfsdfds</th>
-               </tr>
-             </thead>
-             <tbody>
-             </tbody>
-           </table>
-
+                <thead>
+                    <tr>
+                        <th>Round</th>
+                        <th>kshdjs</th>
+                        <th>dfsdfds</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+-->
         </div>
         <footer>
-            <h13>Copyright &copy <i> Sdooodly 2023</i></h13>
+            <h13>Copyright &copy <i> Sdooodly @ The Odin Project</i></h13>
         </footer>
     </div>
     <script src="script.js"></script>
