--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
             <nav>
                 <a href="https://github.com/sdooodly" target="_blank" class="icon github-icon"></a>
 
-                <a href="https://www.linkedin.com/in/gayathri-gireesh-sujatha" target="_blank"
-                    class="icon linkedin-icon"></a>
+                <a href="https://www.linkedin.com/in/gayathri-gireesh-sujatha" target="_blank" class="icon linkedin-icon"></a>
                 <a href="mailto:gayathrigs@outlook.com" class="icon gmail-icon"></a>
 
             </nav>
@@ -54,24 +53,26 @@
             </p>
 
             <div class="options">
-                <button id="rock"></button>
-                <button id="paper"></button>
-                <button id="scissors"></button>
+                <button id="rock" class="optionsIcon"></button>
+                <button id="paper" class="optionsIcon"></button>
+                <button id="scissors" class="optionsIcon"></button>
             </div>
 
             <div class="score">
                 <div class="left">
                     <h1>YOU</h1>
                     <h1 id="yourScoreCell">0</h1>
+                    <p id="ycText">Your choice: </p>
                 </div>
                 <div class="left">
                     <h1>COMPUTER</h1>
                     <h1 id="computerScoreCell">0</h1>
+                    <p id="ccText">Computer's choice: </p>
                 </div>
             </div>
 
-            <p id="ycText">Your choice: </p>
-            <p id="ccText">Computer's choice: </p>
+
+
             <p id="result"></p>
 
             <!--<br><br> 
