Buttons and heading

--- a/index.html
+++ b/index.html
@@ -48,32 +48,34 @@
             <p>
                 Legend has it that Rock Paper Scissors was first played by the ancient gods, who sought a way to settle
                 their eternal
-                disputes without resorting to violence or bloodshed. And so they devised a game that would test their
-                intellect and agility, their cunning and their wit. Good luck!
+                disputes without resorting to bloodshed. Hence they devised a game that would test their cunning and their wit. Good luck!
             </p>
 
             <div class="options">
-                <button id="rock" class="optionsIcon"></button>
-                <button id="paper" class="optionsIcon"></button>
-                <button id="scissors" class="optionsIcon"></button>
+                <button id="rock" class="diamond">ROCK</button>
+                <button id="paper" class="diamond">PAPER</button>
+                <button id="scissors" class="diamond">SCISSORS</button>
             </div>
 
             <div class="score">
                 <div class="left">
-                    <h1>YOU</h1>
-                    <h1 id="yourScoreCell">0</h1>
-                    <p id="ycText">Your choice: </p>
+                    <h2>YOU</h2>
+                    <h2 id="yourScoreCell">0</h2>
+                    <p id="ycText"></p>
+                    <img id="yourChoiceImg" class="optionsIcon" src="" alt="">
                 </div>
                 <div class="left">
-                    <h1>COMPUTER</h1>
-                    <h1 id="computerScoreCell">0</h1>
-                    <p id="ccText">Computer's choice: </p>
+                    <h2>COMPUTER</h2>
+                    <h2 id="computerScoreCell">0</h2>
+                    <p id="ccText"></p>
+                    <img id="computerChoiceImg" class="optionsIcon" src="" alt="">
                 </div>
             </div>
 
 
 
-            <p id="result"></p>
+
+            <h2 id="result"></h2>
 
             <!--<br><br> 
 
