--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
             <h1>Rock Paper Scissors</h1>
 
             <p>
-                Legend has it that Rock Paper Scissors was first played by the ancient gods, who sought a way to settle
-                their eternal
-                disputes without resorting to bloodshed. Hence they devised a game that would test their cunning and their wit. Good luck!
+                Get ready to engage in the age-old battle of deciding who's the boss of hand gestures!
+
             </p>
 
             <div class="options">
