--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 Step right up and take your place among the legends of Rock Paper Scissors!</p>
             <p>Good luck!!!</p>
             <div class="button-container">
-                <button id="yesBtn">YES</button>
-                <button id="noBtn">NO</button>
+                <button id="yesBtn" class="diamond">YES</button>
+                <button id="noBtn" class="diamond">NO</button>
             </div>
 
         </div>
@@ -57,13 +57,13 @@
             </div>
 
             <div class="score">
-                <div class="left">
+                <div class="column">
                     <h2>YOU</h2>
                     <h2 id="yourScoreCell">0</h2>
                     <p id="ycText"></p>
                     <img id="yourChoiceImg" class="optionsIcon" src="" alt="">
                 </div>
-                <div class="left">
+                <div class="column">
                     <h2>COMPUTER</h2>
                     <h2 id="computerScoreCell">0</h2>
                     <p id="ccText"></p>
@@ -72,9 +72,10 @@
             </div>
 
 
+            <div class="resultDiv">
 
-
-            <h2 id="result"></h2>
+                <h2 id="result"></h2>
+            </div>
 
             <!--<br><br> 
 
