--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
         <header>
-            <div class="logo"></div>
+            <div class="logo">R-P-S</div>
             <nav>
                 <a href="https://github.com/sdooodly" target="_blank" class="icon github-icon"></a>
 
