--- a/index.html
+++ b/index.html
@@ -17,14 +17,18 @@
 
 
         <header>
-            <div class="logo">R-P-S</div>
             <nav>
                 <a href="https://github.com/sdooodly" target="_blank" class="icon github-icon"></a>
 
-                <a href="https://www.linkedin.com/in/gayathri-gireesh-sujatha" target="_blank" class="icon linkedin-icon"></a>
+                <a href="https://www.linkedin.com/in/gayathri-gireesh-sujatha" target="_blank"
+                    class="icon linkedin-icon"></a>
                 <a href="mailto:gayathrigs@outlook.com" class="icon gmail-icon"></a>
 
             </nav>
+            <div class="logo">Copyright &copy <i> <a href="https://github.com/sdooodly" target="_blank">Sdooodlyt</a>
+
+                </i></div>
+           
         </header>
 
         <div id="popup" class="popup">
@@ -94,9 +98,6 @@
             </table>
 -->
         </div>
-        <footer>
-            <h13>Copyright &copy <i> Sdooodly @ The Odin Project</i></h13>
-        </footer>
     </div>
     <script src="script.js"></script>
 </body>
