--- a/index.html
+++ b/index.html
@@ -14,23 +14,16 @@
 
 <body>
     <div class="overlayContainer">
-
-
         <header>
             <nav>
                 <a href="https://github.com/sdooodly" target="_blank" class="icon github-icon"></a>
-
                 <a href="https://www.linkedin.com/in/gayathri-gireesh-sujatha" target="_blank"
                     class="icon linkedin-icon"></a>
                 <a href="mailto:gayathrigs@outlook.com" class="icon gmail-icon"></a>
-
             </nav>
-            <div class="logo">Copyright &copy <i> <a href="https://github.com/sdooodly" target="_blank">Sdooodlyt</a>
-
+            <div class="logo">Copyright &copy <i> <a href="https://github.com/sdooodly" target="_blank">Sdooodly</a>
                 </i></div>
-           
         </header>
-
         <div id="popup" class="popup">
             <h2>Helloooooo</h2>
             <p>Are you ready to take on the most formidable of foes? Are you ready to pit your wits and your cunning
@@ -41,25 +34,17 @@
                 <button id="yesBtn" class="diamond">YES</button>
                 <button id="noBtn" class="diamond">NO</button>
             </div>
-
         </div>
-
         <div class="content">
-
-
             <h1>Rock Paper Scissors</h1>
-
             <p>
                 Get ready to engage in the age-old battle of deciding who's the boss of hand gestures!
-
             </p>
-
             <div class="options">
                 <button id="rock" class="diamond">ROCK</button>
                 <button id="paper" class="diamond">PAPER</button>
                 <button id="scissors" class="diamond">SCISSORS</button>
             </div>
-
             <div class="score">
                 <div class="column">
                     <h2>YOU</h2>
@@ -74,17 +59,10 @@
                     <img id="computerChoiceImg" class="optionsIcon" src="" alt="">
                 </div>
             </div>
-
-
             <div class="resultDiv">
-
                 <h2 id="result"></h2>
             </div>
-
             <!--<br><br> 
-
-
-
             <table id="log">
                 <thead>
                     <tr>
@@ -96,10 +74,9 @@
                 <tbody>
                 </tbody>
             </table>
--->
+        -->
         </div>
     </div>
     <script src="script.js"></script>
 </body>
-
 </html>
